tests/k8s_testcases/example_policies/resourcelist-one-path-example/resource-path-scheme.yaml
resourceList: ./resources-path.yaml

networkConfigList:
  - name: workload_resources_captured
    resourceList:
      - resources-path.yaml
    expectedWarnings: 0

queries:
  - name: all-captured
    allCaptured:
      - workload_resources_captured
    expected: 4
